--- a/style.css
+++ b/style.css
@@ -37,6 +37,16 @@ body {
   width: 100%;
 }
 
+body::before {
+  content: '';
+  background: url(images/pattern-background-mobile.svg) no-repeat center top / cover;
+  width: 100%;
+  height: 50%;
+  top: 0;
+  position: absolute;
+  z-index: -1;
+}
+
 main {
   align-items: center;
   background: white;
